--- a/Assignment3/src/application/Menu.fxml
+++ b/Assignment3/src/application/Menu.fxml
@@ -298,7 +298,7 @@
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
                         <ListView fx:id="listView" layoutX="350.0" layoutY="149.0" onMouseClicked="#handleItemSelection" prefHeight="400.0" prefWidth="500.0" />
-                        <Button fx:id="buttonBack3" layoutX="35.0" layoutY="29.0" mnemonicParsing="false" onAction="#handleButtonListBack" text="Back">
+                        <Button fx:id="buttonBack3" layoutX="35.0" layoutY="29.0" mnemonicParsing="false" onAction="#handleButtonListBack" text="Main menu">
                            <font>
                               <Font name="Manjari Regular" size="24.0" />
                            </font>
