--- a/Assignment3/src/resources/Menu.fxml
+++ b/Assignment3/src/resources/Menu.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" stylesheets="@application.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.MenuController">
+<Pane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" stylesheets="@application.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.MenuController">
    <children>
       <TabPane fx:id="tabPane" prefHeight="800.0" prefWidth="1200.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
@@ -241,7 +241,7 @@
                               <Font size="24.0" />
                            </font>
                         </TextField>
-                        <Button fx:id="buttonImageCreate" disable="true" layoutX="522.0" layoutY="651.0" mnemonicParsing="false" onAction="#handleButtonImageCreate" text="Create">
+                        <Button fx:id="buttonImageCreate" layoutX="522.0" layoutY="651.0" mnemonicParsing="false" onAction="#handleButtonImageCreate" text="Create">
                            <font>
                               <Font name="Manjari Regular" size="24.0" />
                            </font>
