--- a/Assignment3/src/resources/Menu.fxml
+++ b/Assignment3/src/resources/Menu.fxml
@@ -363,8 +363,8 @@
                                     <Font name="DejaVu Sans ExtraLight" size="20.0" />
                                  </font>
                               </Text>
-                              <ListView fx:id="listViewCorrect" layoutX="320.0" layoutY="230.0" onMouseClicked="#handleListView" prefHeight="200.0" prefWidth="200.0" />
-                              <ListView fx:id="listViewIncorrect" layoutX="680.0" layoutY="230.0" onMouseClicked="#handleListView" prefHeight="200.0" prefWidth="200.0" />
+                              <ListView fx:id="listViewCorrect" layoutX="320.0" layoutY="230.0" onMouseClicked="#handleListViewCorrect" prefHeight="200.0" prefWidth="200.0" />
+                              <ListView fx:id="listViewIncorrect" layoutX="680.0" layoutY="230.0" onMouseClicked="#handleListViewIncorrect" prefHeight="200.0" prefWidth="200.0" />
                               <StackPane layoutX="425.0" layoutY="459.0" prefHeight="250.0" prefWidth="350.0">
                                  <children>
                                     <MediaView fx:id="mediaViewSummary" fitHeight="250.0" fitWidth="350.0" />
