--- a/Assignment3/src/resources/Menu.fxml
+++ b/Assignment3/src/resources/Menu.fxml
@@ -176,8 +176,8 @@
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="767.0" prefWidth="1200.0">
                      <children>
-                        <ListView fx:id="listViewAudioFiles" layoutX="56.0" layoutY="209.0" prefHeight="350.0" prefWidth="400.0" />
-                        <ListView fx:id="listViewSelected" layoutX="659.0" layoutY="209.0" prefHeight="350.0" prefWidth="400.0" />
+                        <ListView fx:id="listViewAudioFiles" layoutX="56.0" layoutY="209.0" onMouseClicked="#handleListViewAudioFiles" prefHeight="350.0" prefWidth="400.0" />
+                        <ListView fx:id="listViewSelected" layoutX="659.0" layoutY="209.0" onMouseClicked="#handleListViewAudioSelected" prefHeight="350.0" prefWidth="400.0" />
                         <Button layoutX="525.0" layoutY="288.0" mnemonicParsing="false" onAction="#handleButtonAdd" text="&gt;&gt;">
                            <font>
                               <Font name="Manjari Regular" size="24.0" />
