--- a/Assignment3/src/resources/Play.fxml
+++ b/Assignment3/src/resources/Play.fxml
@@ -10,31 +10,37 @@
 <?import javafx.scene.shape.Polygon?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<Pane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="850.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/" xmlns:fx="http://javafx.com/fxml/" fx:controller="application.controller.PlayController">
+<Pane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="850.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.PlayController">
    <children>
       <StackPane fx:id="mediaViewPane" prefHeight="800.0" prefWidth="1200.0">
          <children>
             <MediaView fx:id="mediaView" fitHeight="${mediaViewPane.height}" fitWidth="${mediaViewPane.width}" />
          </children>
       </StackPane>
-      <Button fx:id="buttonMute" layoutX="1000.0" layoutY="800.0" mnemonicParsing="false" onAction="#handleButtonMute" prefHeight="50.0" prefWidth="200.0" text="mute" />
-      <Button fx:id="buttonPlay" layoutY="800.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#handleButtonPlay" prefHeight="50.0" prefWidth="70.0">
+      <Button fx:id="playButton" layoutY="800.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#handleButtonPlay" prefHeight="50.0" prefWidth="70.0">
          <graphic>
             <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="60.0">
                <children>
-                  <Polygon points="-50.0, 40.0, 50.0, 40.0, 0.0, -60.0" rotate="90.0" scaleX="0.28" scaleY="0.3" stroke="BLACK" strokeType="INSIDE" translateX="-30.0" translateY="-25.0" />
-                  <Rectangle arcHeight="5.0" arcWidth="5.0" height="30.0" stroke="BLACK" strokeType="INSIDE" translateX="-60.0" translateY="10.0" width="8.0" />
-                  <Rectangle arcHeight="5.0" arcWidth="5.0" height="30.0" stroke="BLACK" strokeType="INSIDE" translateX="-58.0" translateY="10.0" width="8.0" />
+                  <Polygon fx:id="playSymbol" points="-50.0, 40.0, 50.0, 40.0, 0.0, -60.0" rotate="90.0" scaleX="0.28" scaleY="0.3" stroke="BLACK" strokeType="INSIDE" translateX="-18.0" translateY="-25.0" visible="false" />
+                  <Rectangle fx:id="pauseSymbol1" arcHeight="5.0" arcWidth="5.0" height="30.0" stroke="BLACK" strokeType="INSIDE" translateX="-80.0" translateY="10.0" width="8.0" />
+                  <Rectangle fx:id="pauseSymbol2" arcHeight="5.0" arcWidth="5.0" height="30.0" stroke="BLACK" strokeType="INSIDE" translateX="-75.0" translateY="10.0" width="8.0" />
                </children>
             </HBox>
          </graphic>
       </Button>
-      <Slider fx:id="progressSlider" layoutX="80.0" layoutY="800.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#handleSliderChanged" onMouseDragExited="#handleSliderDragged" onMousePressed="#handleMousePressed" onMouseReleased="#handleMouseReleased" prefHeight="50.0" prefWidth="750.0" />
+      <Slider fx:id="timeSlider" layoutX="80.0" layoutY="800.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMousePressed="#handleMousePressed" prefHeight="50.0" prefWidth="750.0" />
       <Label fx:id="timeLabel" alignment="CENTER" layoutX="830.0" layoutY="800.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="170.0" textAlignment="CENTER">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
+      <Slider fx:id="volumeSlider" layoutX="1052.0" layoutY="817.0" prefHeight="15.0" prefWidth="134.0" />
+      <Text layoutX="1011.0" layoutY="831.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Vol:">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Text>
    </children>
 </Pane>
