--- a/Assignment3/src/resources/applicationlight.css
+++ b/Assignment3/src/resources/applicationlight.css
@@ -1,13 +1,13 @@
 .root {
-    -fx-background-color: linear-gradient(from 25% 25% to 100% 100%, #000000, #757575);
+    -fx-background-color: #000000;
 }
 
 .button {
 	-fx-background-color: transparent;
     -fx-font-family: "DejaVu Sans";
     -fx-font-size: 24px;
-    -fx-text-fill: #79b4d1;
-    -fx-border-color: #79b4d1;
+    -fx-text-fill: #395389;
+    -fx-border-color: #395389;
     -fx-border-width: 2 2 2 2;
     -fx-border-radius: 4px;
     -fx-padding: 8 16 8 16;
@@ -15,25 +15,25 @@
 }
 
 .button:hover {
-	-fx-background-color: #535d6e;
+	-fx-background-color: #c5c5c5;
 	-fx-background-radius: 4px;
     -fx-font-family: "DejaVu Sans";
     -fx-font-size: 24px;
-    -fx-text-fill: #79b4d1;
-    -fx-border-color: #79b4d1;
+    -fx-text-fill: #395389;
+    -fx-border-color: #395389;
     -fx-border-width: 2 2 2 2;
     -fx-border-radius: 4px;
     -fx-padding: 8 16 8 16;
 }
 
 .button:pressed {
-	-fx-background-color: #535d6e;
+	-fx-background-color: #c5c5c5;
 	-fx-background-radius: 4px;
 	-fx-background-insets: 10;
     -fx-font-family: "DejaVu Sans";
     -fx-font-size: 24px;
-    -fx-text-fill: #79b4d1;
-    -fx-border-color: #79b4d1;
+    -fx-text-fill: #395389;
+    -fx-border-color: #395389;
     -fx-border-width: 2 2 2 2;
     -fx-border-radius: 4px;
     -fx-padding: 8 16 8 16;
@@ -41,68 +41,68 @@
 
 .text-field {
 	-fx-text-box-border: transparent;
-	-fx-control-inner-background: #4a4a4a;
+	-fx-control-inner-background: #d3d3d3;
 	-fx-faint-focus-color: transparent;
-	-fx-border-color: #79b4d1;
+	-fx-border-color: #395389;
 	-fx-border-width: 2;
     -fx-border-radius: 6px;
-    -fx-prompt-text-fill: #b5b5b5;
-    -fx-highlight-text-fill: #79b4d1;
+    -fx-prompt-text-fill: #666666;
+    -fx-highlight-text-fill: #395389;
     -fx-highlight-fill: #333b3b3b;
 }
 
 .text-field:focused {
-	-fx-control-inner-background: #4a4a4a;
-	-fx-faint-focus-color: #79b4d1;
-	-fx-highlight-text-fill: #79b4d1;
+	-fx-control-inner-background: #d3d3d3;
+	-fx-faint-focus-color: #395389;
+	-fx-highlight-text-fill: #395389;
 	-fx-highlight-fill: #333b3b3b;
 }
 
 .text-area {
 	-fx-text-box-border: transparent;
-	-fx-control-inner-background: #4a4a4a;
-	-fx-faint-focus-color: #79b4d1;
-	-fx-border-color: #79b4d1;
+	-fx-control-inner-background: #d3d3d3;
+	-fx-faint-focus-color: #395389;
+	-fx-border-color: #395389;
 	-fx-border-width: 2;
     -fx-border-radius: 6px;
-    -fx-prompt-text-fill: #b5b5b5;
-    -fx-highlight-text-fill: #79b4d1;
+    -fx-prompt-text-fill: #666666;
+    -fx-highlight-text-fill: #395389;
     -fx-highlight-fill: #333b3b3b;
 }
 
 .text-area:focused {
-	-fx-control-inner-background: #4a4a4a;
-	-fx-faint-focus-color: #79b4d1;
-	-fx-highlight-text-fill: #79b4d1;
+	-fx-control-inner-background: #d3d3d3;
+	-fx-faint-focus-color: #395389;
+	-fx-highlight-text-fill: #395389;
 	-fx-highlight-fill: #333b3b3b;
 }
 
 .cell:empty {
-	-fx-background-color: #4a4a4a;
+	-fx-background-color: #d3d3d3;
 	-fx-font-size: 18px;
 }
 
 .cell:filled {
-	-fx-background-color: #4a4a4a;
+	-fx-background-color: #d3d3d3;
 	-fx-font-size: 18px;
-    -fx-border-color: white;
+    -fx-border-color: #000000;
     -fx-border-width: 0 0 1 0;
-    -fx-text-fill: white;
+    -fx-text-fill: #000000;
 }
 
 .cell:selected {
-	-fx-background-color: #2B2B2B;
+	-fx-background-color: #b2b2b2;
 	-fx-font-size: 18px;
-    -fx-border-color: white;
+    -fx-border-color: #000000;
     -fx-border-width: 0 0 1 0;
-    -fx-text-fill: #79b4d1;
+    -fx-text-fill: #395389;
 }
 
 .list-view {
-	-fx-border-color: #79b4d1;
+	-fx-border-color: #395389;
 	-fx-border-width: 2;
     -fx-border-radius: 6px;
-    -fx-background-color: #4a4a4a;
+    -fx-background-color: #d3d3d3;
 }
 
 .scroll-bar {
@@ -119,100 +119,105 @@
 
 .menu-button { 
 	-fx-background-color: transparent;
-    -fx-border-color: #79b4d1;
+    -fx-border-color: #395389;
     -fx-border-width: 2 2 2 2;
     -fx-border-radius: 4px;
     -fx-padding: 8 16 8 16;
+    -fx-text-fill: #395389;
 }
 
 .menu-button:hover {
-	-fx-background-color: #535d6e;
+	-fx-background-color: #c5c5c5;
 	-fx-background-radius: 4px;
-    -fx-border-color: #79b4d1;
+    -fx-border-color: #395389;
     -fx-border-width: 2 2 2 2;
     -fx-border-radius: 4px;
     -fx-padding: 8 16 8 16;
 }
 
 .menu-button:showing {
-	-fx-background-color: #535d6e;
+	-fx-background-color: #c5c5c5;
 	-fx-background-radius: 4px;
 	-fx-background-insets: 10;
-    -fx-border-color: #79b4d1;
+    -fx-border-color: #395389;
     -fx-border-width: 2 2 2 2;
     -fx-border-radius: 4px;
     -fx-padding: 8 16 8 16;
 }
 
 .menu-button .arrow {
-    -fx-background-color: #79b4d1;
+    -fx-background-color: #395389;
 }
 
 .context-menu {
-    -fx-background-color: #4a4a4a;
-    -fx-border-color: #4a4a4a;
+    -fx-background-color: #d3d3d3;
+    -fx-border-color: #d3d3d3;
 }
 
 .menu-item .label {
-	-fx-background-color: #4a4a4a;
-    -fx-text-fill: white;
+	-fx-background-color: #d3d3d3;
+    -fx-text-fill: #000000;
     -fx-font-size: 18px;
     -fx-pref-width: 179;
     -fx-border-width: 0 0 0 0;
 }
 
 .menu-item:hover .label {
-	-fx-background-color: #303030;
-	-fx-border-color: #303030;
+	-fx-background-color: #acacac;
+	-fx-border-color: #acacac;
 	-fx-border-width: 0 0 0 0;
 }
 
 .menu-item:focused .label {
-	-fx-background-color: #303030;
-	-fx-border-color: #303030;
+	-fx-background-color: #acacac;
+	-fx-border-color: #acacac;
 	-fx-border-width: 0 0 0 0;
 }
 
 .tab-pane {
-	-fx-background-color: #303030;
+	-fx-background-color: #EAEAEA;
     -fx-tab-min-width: 150px;
 }
 
 .tab-pane .tab-header-area .tab-header-background {
-    -fx-background-color: #6D6D6D;
+    -fx-background-color: #D3D3D3;
 }
 
 .tab .tab-label { 
-    -fx-background-color: #909090;
+    -fx-background-color: #A8A8A8;
     -fx-font-size: 18px;
-    -fx-text-fill: white;
+    -fx-text-fill: #000000;
 }
 
 .tab:selected .tab-label { 
-    -fx-background-color: #303030;
-    -fx-text-fill: #79b4d1;
+    -fx-background-color: #898989;
+    -fx-text-fill: #252f6f;
 }
 
 .tab-pane .tab {
-    -fx-background-color: #909090;
+    -fx-background-color: #A8A8A8;
 
 }
 
 .tab-pane .tab:selected { 
-    -fx-background-color: #303030;
+    -fx-background-color: #898989;
     -fx-focus-color: transparent;
 }
 
-.tab{
+.tab {
     -fx-background-insets: 0 1 0 1,0,0;
 }
 
+.label {
+	-fx-text-fill: #000000;
+}
+
 .toggle-button {
-	-fx-background-color: #EAEAEA;
+	-fx-background-color: #303030;
     -fx-font-family: "DejaVu Sans";
     -fx-font-size: 24px;
-    -fx-text-fill: #395389;
-    -fx-border-color: #395389;
+    -fx-text-fill: #79b4d1;
+    -fx-border-color: #79b4d1;
     -fx-border-width: 2 2 2 2;
     -fx-border-radius: 4px;
     -fx-padding: 8 16 8 16;
@@ -221,27 +226,25 @@
 }
 
 .toggle-button:hover {
-	-fx-background-color: #c5c5c5;
+	-fx-background-color: #535d6e;
 	-fx-background-radius: 4px;
     -fx-font-family: "DejaVu Sans";
     -fx-font-size: 24px;
-    -fx-text-fill: #395389;
-    -fx-border-color: #395389;
+    -fx-text-fill: #79b4d1;
+    -fx-border-color: #79b4d1;
     -fx-border-width: 2 2 2 2;
     -fx-border-radius: 4px;
     -fx-padding: 8 16 8 16;
-    -fx-background-radius: 4px;
-    -fx-background-insets: 2;
 }
 
 .toggle-button:pressed {
-	-fx-background-color: #c5c5c5;
+	-fx-background-color: #535d6e;
 	-fx-background-radius: 4px;
 	-fx-background-insets: 10;
     -fx-font-family: "DejaVu Sans";
     -fx-font-size: 24px;
-    -fx-text-fill: #395389;
-    -fx-border-color: #395389;
+    -fx-text-fill: #79b4d1;
+    -fx-border-color: #79b4d1;
     -fx-border-width: 2 2 2 2;
     -fx-border-radius: 4px;
     -fx-padding: 8 16 8 16;
